# adjacency-agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  adjacency_agents_documentation_driven_development_v0_4_final.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  ddd.md  security.md  testing.md
examples/: anthropic_adapter_example.py  fake_llm_example.py  logged_vs_guest_example.py  ollama_adapter_example.py  openai_adapter_example.py  structural_pointer_example.py
src/adjacency_agents/: __init__.py  decorators.py  engine.py  errors.py  llm.py  models.py  registry.py  router.py  schema.py  tracing.py
src/adjacency_agents/adapters/: __init__.py  anthropic.py  ollama.py  openai.py
tests/: test_anthropic_adapter.py  test_async_engine.py  test_context_injection.py  test_decorators.py  test_engine.py  test_errors.py  test_fake_llm.py  test_models.py  test_ollama_adapter.py  test_openai_adapter.py  test_pointer_transitions.py  test_registry.py  test_router.py  test_schema.py  test_synthesis.py  test_tool_execution_errors.py  test_tracing.py
