[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adjacency-agents"
version = "0.1.0"
description = "Deterministic tool orchestration for LLM/SLM flows with policy-gated parsing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AdjacencyAgents" }]
keywords = [
    "llm",
    "slm",
    "agents",
    "tool-calling",
    "openai",
    "anthropic",
    "ollama",
    "pydantic",
    "policy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
]

[project.urls]
Homepage = "https://github.com/SDWLincoln/adjacency-agents"
Documentation = "https://github.com/SDWLincoln/adjacency-agents#readme"
Repository = "https://github.com/SDWLincoln/adjacency-agents"
Issues = "https://github.com/SDWLincoln/adjacency-agents/issues"
Changelog = "https://github.com/SDWLincoln/adjacency-agents/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
ollama = ["ollama>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adjacency_agents = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
]
ignore = [
    "E501", # line length is handled by formatter; long literals in tests are fine
    "B008", # function call in default (pydantic Field() patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "N802",  # test_X function naming is fine
    "N803",  # argument naming in tests
    "N806",  # variable naming in tests
]
"examples/*" = [
    "N802",
    "N806",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
files = ["src/adjacency_agents"]
plugins = ["pydantic.mypy"]

